added dance mode and cleaned up the HTML

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,6 @@
     <!--<link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -14,9 +13,15 @@
         <div class="notification">
             Select one below!
         </div>
-        <div class="buttons has-text-centered is-mobile block">
+        <div class="columns has-text-centered is-mobile block">
 
         </div>
+        <div class="columns has-text-centered is-mobile block">
+            <div class="column">
+                <div id="dance" class="notification">Dance</div>
+            </div>
+        </div>
+
     </div>
 
 </body>
